--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
   <dependencyManagement>
     <dependencies>
 
+      <!-- -->
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>jcr.core</artifactId>
@@ -110,6 +111,31 @@
         <groupId>org.crashub</groupId>
         <artifactId>jcr.core</artifactId>
         <type>war</type>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <!-- -->
+      <dependency>
+        <groupId>org.crashub</groupId>
+        <artifactId>jcr.jackrabbit</artifactId>
+        <type>war</type>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <!-- -->
+      <dependency>
+        <groupId>org.crashub</groupId>
+        <artifactId>jcr.exo</artifactId>
+        <type>war</type>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <!-- -->
+      <dependency>
+        <groupId>org.crashub</groupId>
+        <artifactId>jcr.doc</artifactId>
+        <classifier>html</classifier>
+        <type>zip</type>
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
 
@@ -190,6 +216,7 @@
     <module>exo</module>
     <module>jackrabbit</module>
     <module>doc</module>
+    <module>distrib</module>
   </modules>
 
   <build>
