--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -2,12 +2,12 @@
   <parent>
     <artifactId>jcr.parent</artifactId>
     <groupId>org.crashub</groupId>
-    <version>1.0.0-beta2</version>
+    <version>1.0.0-beta3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jcr.distrib</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-beta2</version>
+  <version>1.0.0-beta3-SNAPSHOT</version>
 
   <name>CRaSH JCR Distrib</name>
   <description>The CRaSH JCR distribution</description>
