--- a/exo/pom.xml
+++ b/exo/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <artifactId>jcr.parent</artifactId>
     <groupId>org.crashub</groupId>
-    <version>1.0.0-cr8-SNAPSHOT</version>
+    <version>1.0.0-cr8</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jcr.exo</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-cr8-SNAPSHOT</version>
+  <version>1.0.0-cr8</version>
 
   <name>CRaSH Plugin - JCR eXo</name>
   <description>The CRaSH JCR module for eXo Platform</description>
