--- a/jackrabbit/pom.xml
+++ b/jackrabbit/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <artifactId>jcr.parent</artifactId>
     <groupId>org.crashub</groupId>
-    <version>1.0.0-cr9-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jcr.jackrabbit</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-cr9-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>CRaSH Plugin - JCR Jackrabbit</name>
   <description>The CRaSH JCR module for Apache Jackrabbit</description>
