--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,12 +2,12 @@
   <parent>
     <artifactId>jcr.parent</artifactId>
     <groupId>org.crashub</groupId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jcr.core</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>${parent.version}</version>
 
   <name>CRaSH Plugin - JCR core</name>
   <description>The CRaSH JCR module</description>
@@ -22,10 +22,6 @@
       <groupId>org.crashub</groupId>
       <artifactId>crash.shell</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.connectors.ssh</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>javax.jcr</groupId>
@@ -34,16 +30,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.packaging</artifactId>
-      <type>war</type>
-    </dependency>
-
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.crashub</groupId>
       <artifactId>crash.shell</artifactId>
@@ -52,30 +43,26 @@
     </dependency>
   </dependencies>
 
-  <profiles>
-    <profile>
-      <id>main</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.crashub</groupId>
-          <artifactId>crash.connectors.telnet</artifactId>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.1</version>
         <executions>
           <execution>
-            <id>make-packaging</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>xebialabs</classifier>
+            </configuration>
           </execution>
         </executions>
-      </plugin>
-    </plugins>
-  </build>
 
+      </plugin>
+
+    </plugins>
+
+  </build>
 </project>
