--- a/jackrabbit/pom.xml
+++ b/jackrabbit/pom.xml
@@ -1,153 +1,142 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <artifactId>jcr.parent</artifactId>
+        <groupId>org.crashub</groupId>
+        <version>1.1.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>jcr.jackrabbit</artifactId>
+    <packaging>jar</packaging>
+    <version>${parent.version}</version>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <artifactId>jcr.parent</artifactId>
-    <groupId>org.crashub</groupId>
-    <version>1.0.1-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>jcr.jackrabbit</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+    <name>CRaSH Plugin - JCR Jackrabbit</name>
+    <description>The CRaSH JCR module for Apache Jackrabbit</description>
 
-  <name>CRaSH Plugin - JCR Jackrabbit</name>
-  <description>The CRaSH JCR module for Apache Jackrabbit</description>
+    <!--
+    How to test easily jackrabbit:
+    > mvn test -Pmain
+    % bootstrap
+    % repo use org.apache.jackrabbit.repository.uri=transient
+    % ws login -u root default
+    -->
 
-  <!--
-  How to test easily jackrabbit:
-  > mvn test -Pmain
-  % bootstrap
-  % repo use org.apache.jackrabbit.repository.uri=transient
-  % ws login -u root default
-  -->
+    <dependencies>
 
-  <dependencies>
-
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.shell</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.connectors.ssh</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>jcr.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>jcr.core</artifactId>
-      <type>war</type>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.jcr</groupId>
-      <artifactId>jcr</artifactId>
-      <version>2.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.packaging</artifactId>
-      <type>war</type>
-    </dependency>
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>crash.shell</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.shrinkwrap</groupId>
-      <artifactId>shrinkwrap-impl-base</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>jcr.core</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-client</artifactId>
-      <version>${jackrabbit.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-commons</artifactId>
-      <version>${jackrabbit.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-core</artifactId>
-      <version>${jackrabbit.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr2dav</artifactId>
-      <version>${jackrabbit.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-core</artifactId>
-      <version>${lucene.version}</version>
-    </dependency>
-  </dependencies>
-
-  <profiles>
-    <profile>
-      <id>main</id>
-      <dependencies>
         <dependency>
-          <groupId>jline</groupId>
-          <artifactId>jline</artifactId>
+            <groupId>org.crashub</groupId>
+            <artifactId>crash.shell</artifactId>
         </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 
-  <build>
-    <testResources>
-      <testResource>
-        <directory>src/test/resources</directory>
-        <includes>
-          <include>**/*</include>
-        </includes>
-      </testResource>
-      <testResource>
-        <directory>src/main/webapp/WEB-INF/</directory>
-        <includes>
-          <include>**/*</include>
-        </includes>
-      </testResource>
-    </testResources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>make-packaging</id>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+        <dependency>
+            <groupId>org.crashub</groupId>
+            <artifactId>jcr.core</artifactId>
+        </dependency>
 
-  <properties>
-    <jackrabbit.version>2.6.0</jackrabbit.version>
-    <lucene.version>3.6.2</lucene.version>
-  </properties>
+        <dependency>
+            <groupId>javax.jcr</groupId>
+            <artifactId>jcr</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.crashub</groupId>
+            <artifactId>crash.shell</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.shrinkwrap</groupId>
+            <artifactId>shrinkwrap-impl-base</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.crashub</groupId>
+            <artifactId>jcr.core</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jcr-client</artifactId>
+            <version>${jackrabbit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jcr-commons</artifactId>
+            <version>${jackrabbit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-core</artifactId>
+            <version>${jackrabbit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jcr2dav</artifactId>
+            <version>${jackrabbit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+    </dependencies>
+
+    <!--<profiles>-->
+    <!--<profile>-->
+    <!--<id>main</id>-->
+    <!--<dependencies>-->
+    <!--<dependency>-->
+    <!--<groupId>jline</groupId>-->
+    <!--<artifactId>jline</artifactId>-->
+    <!--</dependency>-->
+    <!--</dependencies>-->
+    <!--</profile>-->
+    <!--</profiles>-->
+
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </testResource>
+            <testResource>
+                <directory>src/main/webapp/WEB-INF/</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </testResource>
+        </testResources>
+
+        <!--<plugins>-->
+        <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-assembly-plugin</artifactId>-->
+        <!--<executions>-->
+        <!--<execution>-->
+        <!--<id>make-packaging</id>-->
+        <!--</execution>-->
+        <!--</executions>-->
+        <!--</plugin>-->
+        <!--</plugins>-->
+
+    </build>
+
+    <properties>
+        <jackrabbit.version>2.12.2</jackrabbit.version>
+        <lucene.version>3.6.2</lucene.version>
+    </properties>
 
 </project>
