--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.crashub</groupId>
   <artifactId>jcr.parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -29,9 +29,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git://github.com/crashub/jcr.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/crashub/jcr.git</developerConnection>
-    <url>http://www.crashub.org</url>
+    <connection>scm:git:git://github.com/xebialabs/crashub-jcr.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:xebialabs/crashub-jcr.git</developerConnection>
+    <url>https://github.com/xebialabs/crashub-jcr</url>
   </scm>
 
   <developers>
@@ -78,12 +78,12 @@
     <autoVersionSubmodules>true</autoVersionSubmodules>
 
     <!-- Java 6 -->
-    <maven.compiler.source>6</maven.compiler.source>
-    <maven.compiler.target>6</maven.compiler.target>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
 
     <!-- Encoding -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+    <version.crash>1.3.2</version.crash>
   </properties>
 
   <dependencyManagement>
@@ -93,80 +93,37 @@
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>jcr.core</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>jcr.core</artifactId>
-        <classifier>standalone</classifier>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>jcr.core</artifactId>
         <type>test-jar</type>
-        <version>1.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>jcr.core</artifactId>
-        <type>war</type>
-        <version>1.0.1-SNAPSHOT</version>
-      </dependency>
-
-      <!-- -->
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>jcr.jackrabbit</artifactId>
-        <type>war</type>
-        <version>1.0.1-SNAPSHOT</version>
-      </dependency>
-
-      <!-- -->
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>jcr.exo</artifactId>
-        <type>war</type>
-        <version>1.0.1-SNAPSHOT</version>
-      </dependency>
-
-      <!-- -->
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>jcr.doc</artifactId>
-        <classifier>html</classifier>
-        <type>zip</type>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
 
       <!-- -->
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>crash.shell</artifactId>
-        <version>1.3.0</version>
+        <version>${version.crash}</version>
       </dependency>
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>crash.shell</artifactId>
         <classifier>standalone</classifier>
-        <version>1.3.0</version>
+        <version>${version.crash}</version>
       </dependency>
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>crash.shell</artifactId>
         <type>test-jar</type>
-        <version>1.3.0</version>
+        <version>${version.crash}</version>
       </dependency>
       <dependency>
         <groupId>org.crashub</groupId>
         <artifactId>crash.connectors.ssh</artifactId>
-        <version>1.3.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.crashub</groupId>
-        <artifactId>crash.packaging</artifactId>
-        <type>war</type>
-        <version>1.3.0</version>
+        <version>${version.crash}</version>
       </dependency>
       <dependency>
         <groupId>commons-logging</groupId>
@@ -213,10 +170,10 @@
 
   <modules>
     <module>core</module>
-    <module>exo</module>
+    <!--<module>exo</module>-->
     <module>jackrabbit</module>
-    <module>doc</module>
-    <module>distrib</module>
+    <!--<module>doc</module>-->
+    <!--<module>distrib</module>-->
   </modules>
 
   <build>
@@ -437,7 +394,7 @@
       </activation>
       <build>
         <plugins>
-          <!-- Release with Java 6 -->
+          <!-- Release with Java 8 -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
@@ -451,7 +408,7 @@
                   <rules>
                     <requireJavaVersion>
                       <message>You must release with Java 6!</message>
-                      <version>[1.6,1.8)</version>
+                      <version>[1.8,1.8)</version>
                     </requireJavaVersion>
                   </rules>
                 </configuration>
@@ -503,15 +460,15 @@
       -->
     <profile>
       <id>main</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <version>1.6</version>
-          <scope>system</scope>
-          <systemPath>${tools.jar}</systemPath>
-        </dependency>
-      </dependencies>
+      <!--<dependencies>-->
+        <!--<dependency>-->
+          <!--<groupId>com.sun</groupId>-->
+          <!--<artifactId>tools</artifactId>-->
+          <!--<version>1.6</version>-->
+          <!--<scope>system</scope>-->
+          <!--<systemPath>${tools.jar}</systemPath>-->
+        <!--</dependency>-->
+      <!--</dependencies>-->
       <build>
         <pluginManagement>
           <plugins>
@@ -558,25 +515,25 @@
       </build>
     </profile>
 
-    <profile>
-      <id>sign-artifacts</id>
-      <build>
-        <plugins>
-          <!-- We want to sign the artifact, the POM, and all attached artifacts -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+    <!--<profile>-->
+      <!--<id>sign-artifacts</id>-->
+      <!--<build>-->
+        <!--<plugins>-->
+          <!--&lt;!&ndash; We want to sign the artifact, the POM, and all attached artifacts &ndash;&gt;-->
+          <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-gpg-plugin</artifactId>-->
+            <!--<executions>-->
+              <!--<execution>-->
+                <!--<goals>-->
+                  <!--<goal>sign</goal>-->
+                <!--</goals>-->
+              <!--</execution>-->
+            <!--</executions>-->
+          <!--</plugin>-->
+        <!--</plugins>-->
+      <!--</build>-->
+    <!--</profile>-->
 
     <profile>
       <id>java8</id>
