--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.crashub</groupId>
     <artifactId>jcr.parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
 
     <prerequisites>
         <maven>3.0.4</maven>
@@ -30,7 +30,7 @@
         <connection>scm:git:git://github.com/xebialabs/crashub-jcr.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:xebialabs/crashub-jcr.git</developerConnection>
         <url>https://github.com/xebialabs/crashub-jcr</url>
-      <tag>xl-1.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
