--- a/jackrabbit/pom.xml
+++ b/jackrabbit/pom.xml
@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>jcr.parent</artifactId>
         <groupId>org.crashub</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jcr.jackrabbit</artifactId>
     <packaging>jar</packaging>
-    <version>${parent.version}</version>
+    <version>1.1.0</version>
 
     <name>CRaSH Plugin - JCR Jackrabbit</name>
     <description>The CRaSH JCR module for Apache Jackrabbit</description>
