Use com.xebialabs.crash groupId

--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>jcr.parent</artifactId>
-    <groupId>org.crashub</groupId>
+    <groupId>com.xebialabs.crash</groupId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,17 +15,13 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.crashub</groupId>
+      <groupId>com.xebialabs.crash</groupId>
       <artifactId>jcr.jackrabbit</artifactId>
+      <version>1.1.1-SNAPSHOT</version>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.crashub</groupId>
-      <artifactId>jcr.exo</artifactId>
-      <type>war</type>
-    </dependency>
-    <dependency>
-      <groupId>org.crashub</groupId>
+      <groupId>com.xebialabs.crash</groupId>
       <artifactId>jcr.doc</artifactId>
       <classifier>html</classifier>
       <type>zip</type>
