--- a/doc/pom.xml
+++ b/doc/pom.xml
@@ -21,7 +21,7 @@
 
   <parent>
     <artifactId>jcr.parent</artifactId>
-    <groupId>org.crashub</groupId>
+    <groupId>com.xebialabs.crash</groupId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -40,8 +40,9 @@
       <classifier>standalone</classifier>
     </dependency>
     <dependency>
-      <groupId>org.crashub</groupId>
+      <groupId>com.xebialabs.crash</groupId>
       <artifactId>jcr.core</artifactId>
+      <version>1.1.1-SNAPSHOT</version>
       <classifier>standalone</classifier>
     </dependency>
     <dependency>
@@ -53,12 +54,6 @@
       <artifactId>jcr</artifactId>
       <version>1.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.exoplatform.jcr</groupId>
-      <artifactId>exo.jcr.component.core</artifactId>
-      <version>1.11.1</version>
-    </dependency>
-
   </dependencies>
 
   <build>
