--- a/jackrabbit/pom.xml
+++ b/jackrabbit/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>jcr.parent</artifactId>
-        <groupId>org.crashub</groupId>
+        <groupId>com.xebialabs.crash</groupId>
         <version>1.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -28,8 +28,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.crashub</groupId>
+            <groupId>com.xebialabs.crash</groupId>
             <artifactId>jcr.core</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -58,8 +59,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.crashub</groupId>
+            <groupId>com.xebialabs.crash</groupId>
             <artifactId>jcr.core</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
