--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xebialabs.crash</groupId>
     <artifactId>jcr.parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.1-SNAPSHOT</version>
 
     <prerequisites>
         <maven>3.0.4</maven>
@@ -29,7 +30,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/xebialabs/crashub-jcr.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/xebialabs/crashub-jcr.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com:xebialabs/crashub-jcr.git</developerConnection>
         <url>https://github.com/xebialabs/crashub-jcr</url>
         <tag>HEAD</tag>
     </scm>
