[maven-release-plugin] prepare branch jcr.parent-1.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <connection>scm:git:git://github.com/xebialabs/crashub-jcr.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/xebialabs/crashub-jcr.git</developerConnection>
         <url>https://github.com/xebialabs/crashub-jcr</url>
-        <tag>HEAD</tag>
+        <tag>jcr.parent-1.1.1</tag>
     </scm>
 
     <distributionManagement>
