--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.xebialabs.crash</groupId>
     <artifactId>jcr.parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <prerequisites>
         <maven>3.0.4</maven>
